--- a/main.html
+++ b/main.html
@@ -7,6 +7,22 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<tr>
+				<td>Roll Number</td>
+				<td>Name</td>
+			</tr>
+		</thead>
+		<tr>
+			<td>101</td>
+			<td>Dipmala Pal</td>
+		</tr>
+		<tr>
+			<td>102</td>
+			<td>Anushka Pal</td>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
