--- a/main.html
+++ b/main.html
@@ -7,13 +7,16 @@
 </head>
 
 <body>
+	<div class="table">
 	<table>
 		<thead>
-			<tr>
+			 <tr>
 				<td>Roll Number</td>
 				<td>Name</td>
 			</tr>
 		</thead>
+
+		<tbody>
 		<tr>
 			<td>101</td>
 			<td>Dipmala Pal</td>
@@ -22,7 +25,9 @@
 			<td>102</td>
 			<td>Anushka Pal</td>
 		</tr>
+	</tbody>
 	</table>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
