--- a/main.html
+++ b/main.html
@@ -10,10 +10,8 @@
 	<div class="table">
 	<table>
 		<thead>
-			 <tr>
-				<td>Roll Number</td>
-				<td>Name</td>
-			</tr>
+				<th>Roll Number</th>
+				<th>Name</th>
 		</thead>
 
 		<tbody>
